...
      />
      <Tabs.Screen
        name="People"
        component={PeopleScreen}
        options={{
          title: t('tabs.people'),
          tabBarButtonTestID: 'tab-people',
          tabBarAccessibilityLabel: t('tabs.people'),
          tabBarIcon: PeopleTabIcon,
        }}
      />
      <Tabs.Screen
        name="Settings"
        component={SettingsScreen}
        options={{
          title: t('tabs.settings'),
          tabBarButtonTestID: 'tab-settings',
          tabBarAccessibilityLabel: t('tabs.settings'),
          tabBarIcon: SettingsTabIcon,
        }}
      />
    </Tabs.Navigator>
  );
...
